# multicore-mcu-examples

esp32c6/blinky/: README.md
esp32c6/blinky/blinky-hp/: Cargo.toml
esp32c6/blinky/blinky-hp/.cargo/: config.toml
esp32c6/blinky/blinky-lp/: Cargo.toml  build.rs
esp32c6/blinky/blinky-lp/.cargo/: config.toml
