[package]
edition = "2021"
name = "blinky"
version = "0.1.0"

[[bin]]
name = "blinky"
path = "./src/bin/main.rs"

[dependencies]
defmt = "0.3.10"
defmt-rtt = "0.4.1"
esp-backtrace = { version = "0.15.0", features = [
    "defmt",
    "esp32c6",
    "exception-handler",
    "panic-handler",
] }
esp-hal = { version = "0.23.1", features = ["defmt", "esp32c6", "unstable"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
